# data_science_consultant_lessons

./: .gitattributes  .gitignore  .gitmodules  Readme.md  TODO.md  config.yaml  markdown-preview.css  preview.css  pyproject.toml  strip_flashcards.ipynb  strip_flashcards.py
000-example_format/: 000-example_format.py
001-network_analysis_overview/: 001-01-network_analysis_overview.ipynb  001-01-network_analysis_overview.py
002-best_programming_practices/: 002-01-best_programming_practices.ipynb
003-genai/: 003-01-genai.py  003-02-genai-aws.py
books/: Acing the Data Science Interview (MEAP) (Dan Sanz) (Z-Library).pdf.REMOVED.git-id  Artificial Intelligence A Modern Approach.pdf.REMOVED.git-id  Clean Code In Python_ refactor your legacy code base (Mariano Anaya).pdf.REMOVED.git-id  Clean.Code.A.Handbook.of.Agile.Software.Craftsmanship.pdf.REMOVED.git-id  Computer Vision Using Deep Learning Neural Network Architectures with Python and Keras (Vaibhav Verdhan) (Z-Library).pdf.REMOVED.git-id  Cracking the Coding Interview (Gayle Laakmann McDowell) (Z-Library).pdf.REMOVED.git-id  Five Lines of Code How and when to refactor (Christian Clausen) (Z-Library).pdf.REMOVED.git-id  Good Code, Bad Code Think like a software engineer (Tom Long) (Z-Library).pdf.REMOVED.git-id  Graph Analysis and Visualization Discovering Business Opportunity in Linked Data (Richard Brath, David Jonker) (Z-Library).pdf.REMOVED.git-id  High Performance Computing (Thomas Sterling etc.) (Z-Library) (1).pdf.REMOVED.git-id  (+7 more)
lectures/003-genai/: 003-01-genai.py  (+14 more)
lectures/011-nlp/labs/: pyproject.toml
lectures/011-nlp/labs/coursera-natural-language-processing-specialization/1 - Natural Language Processing with Classification and Vector Spaces/Week 1/: C1W1_L2_Visualizing word frequencies.ipynb  C1_W1_Assignment.ipynb
lectures/011-nlp/labs/coursera-natural-language-processing-specialization/1 - Natural Language Processing with Classification and Vector Spaces/Week 4/: en_embeddings.p.REMOVED.git-id  fr_embeddings.p.REMOVED.git-id
lectures/011-nlp/labs/coursera-natural-language-processing-specialization/2 - Natural Language Processing with Probabilistic Models/Week 2/: WSJ_02-21.pos.REMOVED.git-id
lectures/011-nlp/labs/coursera-natural-language-processing-specialization/2 - Natural Language Processing with Probabilistic Models/Week 3/: en_US.twitter.txt.REMOVED.git-id
lectures/011-nlp/labs/coursera-natural-language-processing-specialization/3 - Natural Language Processing with Sequence Models/Week 2/: predictions.npy.REMOVED.git-id
lectures/011-nlp/labs/coursera-natural-language-processing-specialization/3 - Natural Language Processing with Sequence Models/Week 3/data/large/train/: sentences.txt.REMOVED.git-id
lectures/011-nlp/labs/coursera-natural-language-processing-specialization/4 - Natural Language Processing with Attention Models/Week 4/: weights.REMOVED.git-id
lectures/011-nlp/labs/coursera-natural-language-processing-specialization/4 - Natural Language Processing with Attention Models/Week 4/data/: system_acts.json.REMOVED.git-id
lectures/020-llm-from-scratch-and-compare/020-002-karpathy-series/020-002-01-neural-networks-and-backpropagation/: 020-002-01-neural-networks-and-backpropagation.md  hello.py  micrograd_from_scratch_yay.ipynb  pyproject.toml
lectures/023-ai-industry-analysis/ai-coding-comparision/vscode-gpt5/: README.md  aggregate_doj_press_releases.py  download_doj_press_releases.py  pyproject.toml  requirements.txt
(+168 files in other folders)
