[tool.poetry]
name = "data-science-consultant-lessons"
version = "0.1.0"
description = ""
authors = ["James Morris <me@james-morris.com>"]
readme = "README.md"
packages = [{include = "data_science_consultant_lessons"}]

[tool.poetry.dependencies]
python = "^3.11"
jupytext = "^1.16.1"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pip = "^24.0"
ipykernel = "^6.29.4"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
pillow = "^11.0.0"
tensorflow-cpu = "^2.18.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
