[project]
name = "data-science-consultant-lessons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "matplotlib",
    "nltk>=3.9.1",
    "numpy",
    "pandas",
    #    "torch",
    "scikit-learn>=1.6.1",
]

[tool.uv.workspace]
members = [
    "lectures/020-llm-from-scratch-and-compare/020-002-karpathy-series",
]
