[tool.poetry]
name = "nlp-labs"
version = "0.1.0"
description = ""
authors = ["James Morris <me@james-morris.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"
matplotlib = "^3.9.3"
numpy = "^2.2.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
transformers = "^4.47.0"
scipy = "^1.14.1"
torch = "^2.5.1"
keyring = "^25.5.0"
openai = "^1.57.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
